update mindspore-ai/step_into_llm url

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: My Docs
 docs_dir: 'docs'
-repo_url: https://Tridu33.github.io/step_into_llm_docs/
+repo_url: https://github.com/mindspore-courses/step_into_llm
 repo_name: Tridu33/step_into_llm_docs
 edit_uri: edit/main/docs/
 
